@@ -26,6 +26,7 @@ t/15store-and-retrieve-here-doc-terminator.t
 t/16case-sensitive-default.t
 t/17untainted-multiline-values.t
 t/18non-contiguous-groups.t
+t/19param-found-outside-section.t
 t/array.ini
 t/bad.ini
 t/blank.ini
